--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: ruby
 rvm:
   - 1.9.3
-bundler_args: --without integration
+bundler_args: --without integration development
 script:
   - bundle exec foodcritic -f any .
