--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ rvm:
   - 1.9.3
 bundler_args: --without integration development
 script:
-  - bundle exec foodcritic -f any .
+  - bundle exec rake travis
